<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.david.ermes.View.fragments.AccountFragment">

    <TextView
        android:id="@+id/experience_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="255"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/games_played_label"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/esperienza_acq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/esperienza"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/experience_counter"
        app:layout_constraintTop_toTopOf="@+id/experience_counter"
        app:layout_constraintBottom_toBottomOf="@+id/experience_counter"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/view"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/circular_user_image"
        app:layout_constraintRight_toRightOf="@+id/circular_user_image"
        app:layout_constraintTop_toBottomOf="@+id/circular_user_image"
        android:text="@string/toy_account" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circular_user_image"
        android:layout_width="150dp"
        android:layout_height="152dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/hipster_portait"
        app:civ_border_width="0dp"
        android:elevation="4dp"
        app:civ_shadow="true"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/games_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/account_text"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/games_played_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:text="@string/partite_giocate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/games_counter"
        app:layout_constraintLeft_toRightOf="@+id/games_counter"
        app:layout_constraintTop_toTopOf="@+id/games_counter"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/fav_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pallavolo"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/account_text"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/account_text" />

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@+id/fav_sport"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toTopOf="@+id/fav_sport"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fav_sport"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24"
        app:layout_constraintTop_toTopOf="@+id/dot"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/dot"
        app:layout_constraintLeft_toRightOf="@+id/dot"
        android:layout_marginLeft="4dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="4dp" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esperienza_acq" />

</android.support.constraint.ConstraintLayout>
