<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="395dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        card_view:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/copertina_sport_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/IMG_20170408_193210"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/sport_textview"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Basket" />

        <TextView
            android:id="@+id/orario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            tools:text="18:00"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/oggi_textview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sport_textview" />

        <TextView
            android:id="@+id/oggi_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oggi"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sport_textview"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/dove_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Parco delle albere"
            app:layout_constraintTop_toBottomOf="@+id/oggi_textview"
            app:layout_constraintLeft_toRightOf="@+id/place_vector"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/mappa_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mappa"
            android:textColor="@color/button_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copertina_sport_image" />

        <Button
            android:id="@+id/partecipa_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partecipa"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/copertina_sport_image"
            app:layout_constraintLeft_toRightOf="@+id/mappa_button"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/organizzato_da"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/organizzato_da"
            app:layout_constraintTop_toBottomOf="@+id/dove_textview"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/user_example"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/organizzato_da"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dove_textview" />

        <ImageView
            android:id="@+id/place_vector"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:tint="@android:color/secondary_text_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oggi_textview"
            app:srcCompat="@drawable/ic_place_black_24dp" />


    </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
